src/style/components/heroSection.module.css
.hero {
  position: relative;
  background-image: url("../../assets/horse.jpg");
  width: 100vw;
  height: 350px;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(
      105.89deg,
      rgba(73, 73, 73, 0.396) 2.13%,
      rgba(239, 239, 239, 0.066) 57.17%
    ),
    linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
}

.hero h1 {
  text-align: center;
  position: relative;
  width: 400px;
  font-size: 2rem;
}
.hero h1 strong {
  color: var(--primary);
}

@media (max-width: 700px) {
  .hero h1 {
    font-size: 1.5rem;
    width: 350px;
  }
}

